This commit resolves #21, resolves #7. The issue #14 was fixed in prior commit in this PR adding scrollbar to the description

--- a/DominicanWhoCodes.Blazor/wwwroot/css/site.css
+++ b/DominicanWhoCodes.Blazor/wwwroot/css/site.css
@@ -11,6 +11,15 @@
 .card {
     border-radius: .90rem;
     box-shadow: 0 0.75rem 1.5rem rgba(0, 0, 0, .03);
+    -webkit-transition: transform .8s ease-out;
+    transition: transform .8s ease-out;
+}
+.card:hover {
+    transform: scale(1.1);
+    z-index: 1000;
+    background-color: #fff;
+    box-shadow: 0 0 5px rgba(0, 0, 0, .3);
+
 }
 .card-img-top {
     border-top-left-radius: calc(.90rem - 1px);
@@ -21,6 +30,7 @@
     width: 100%;
     height: 15vw;
     object-fit: cover;
+    object-position: 0 -10px;
 }
 .card:hover .card-img-top {
     -webkit-filter: grayscale(0%); /* Safari 6.0 - 9.0 */
@@ -71,7 +81,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding-top: 20%;
+    padding-top: 35vh;
 }
 
 #pulse-animation {
@@ -143,3 +153,9 @@ span#app-name {
 .description-space p {
     margin: 0;
 }
+
+@media only screen and (max-width: 600px) {
+    .card-img-top {
+        height: 80vw;
+    }
+} 
